tests/ui/generics/wrong-number-of-args-in-macro.stderr
error[E0425]: cannot find type `a` in this scope
  --> $DIR/wrong-number-of-args-in-macro.rs:7:13
   |
LL |         Foo<a, $b>
   |             ^ not found in this scope
...
LL | fn foo<'a, 'b>() -> foo_ty!(&'b (), &'b ()) {}
   |                     ----------------------- in this macro invocation
   |
   = note: this error originates in the macro `foo_ty` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you might be missing a type parameter
   |
LL | fn foo<'a, 'b, a>() -> foo_ty!(&'b (), &'b ()) {}
   |              +++

error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> $DIR/wrong-number-of-args-in-macro.rs:7:9
   |
LL |         Foo<a, $b>
   |         ^^^ expected 1 generic argument
...
LL | fn foo<'a, 'b>() -> foo_ty!(&'b (), &'b ()) {}
   |                     ----------------------- in this macro invocation
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/wrong-number-of-args-in-macro.rs:3:8
   |
LL | struct Foo<T>;
   |        ^^^ -
   = note: this error originates in the macro `foo_ty` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0392]: type parameter `T` is never used
  --> $DIR/wrong-number-of-args-in-macro.rs:3:12
   |
LL | struct Foo<T>;
   |            ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0392, E0425.
For more information about an error, try `rustc --explain E0107`.
